# garmin-yeelight

./: .gitignore  Dockerfile  README.md  bulbs.py  docker-compose.yml  endpoints_definitions.py  garlight.py  logs.py  makefile  pyproject.toml  requirements.txt  routes.py  yeelight-endpoints.py
garlight/: __init__.py  bulbs.py  endpoints_definitions.py  logs.py  models.py  routes.py  run.py  scheduler.py
garlight/db/: models.py
garlight/routing/: bulbs_routes.py  manage_routes.py
tests/: conftest.py  example.py  test_bulb.py  test_manage.py
