[tool.poetry]
name = "garmin-requests"
version = "0.1.0"
description = ""
authors = ["kundzior <grzybek2413@gmail.com>"]
readme = "README.md"
packages = [{include = "garmin_requests"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
yeelight = "^0.7.14"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
